--- a/public/receiver.html
+++ b/public/receiver.html
@@ -26,7 +26,8 @@
 			</div>	
 		</div>
 	</div>
-	<script type="text/javascript" src="socket.io/socket.io.js"></script>
+	<!-- <script type="text/javascript" src="socket.io/socket.io.js"></script> -->
+	<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
 	<script type="text/javascript" src="receiver.js"></script>
 </body>
